@@ -1,7 +1,7 @@
 This is Syndie, an anonymity-aware distributed forum.
 
 Up to date information about Syndie can be found over at
-http://syndie.i2p.net/
+http://syndie.i2p2.de/
 
 This package contains:
 - INSTALL: how to build and install Syndie from source
