@@ -357,7 +357,7 @@ public class Version {
         <authors>
             <author name="Syndie development team" email="syndie-inst@i2p.net"/>
         </authors>
-        <url>http://syndie.i2p.net</url>
+        <url>http://syndie.i2p2.de</url>
         <javaversion>1.4</javaversion>
         <summarylogfilepath>$INSTALL_PATH/install.log</summarylogfilepath>
     </info>
@@ -414,7 +414,7 @@ public class Version {
         <authors>
             <author name="Syndie development team" email="syndie-inst@i2p.net"/>
         </authors>
-        <url>http://syndie.i2p.net</url>
+        <url>http://syndie.i2p2.de</url>
         <javaversion>1.4</javaversion>
         <summarylogfilepath>$INSTALL_PATH/install.log</summarylogfilepath>
     </info>
@@ -471,7 +471,7 @@ public class Version {
         <authors>
             <author name="Syndie development team" email="syndie-inst@i2p.net"/>
         </authors>
-        <url>http://syndie.i2p.net</url>
+        <url>http://syndie.i2p2.de</url>
         <javaversion>1.4</javaversion>
         <summarylogfilepath>$INSTALL_PATH/install.log</summarylogfilepath>
     </info>
@@ -529,7 +529,7 @@ public class Version {
         <authors>
             <author name="Syndie development team" email="syndie-inst@i2p.net"/>
         </authors>
-        <url>http://syndie.i2p.net</url>
+        <url>http://syndie.i2p2.de</url>
         <javaversion>1.4</javaversion>
         <summarylogfilepath>$INSTALL_PATH/install.log</summarylogfilepath>
     </info>
@@ -1005,7 +1005,7 @@ exec java -XstartOnFirstThread \
         <authors>
             <author name="Syndie development team" email="syndie-inst@i2p.net"/>
         </authors>
-        <url>http://syndie.i2p.net</url>
+        <url>http://syndie.i2p2.de</url>
         <javaversion>1.4</javaversion>
         <summarylogfilepath>$INSTALL_PATH/install.log</summarylogfilepath>
     </info>
