@@ -26,4 +26,4 @@ Copyright is theft.  Syndie is in the public domain.
 .SH "SEE ALSO"
 Syndie's documentation is primarily in HTML, located in the
 Syndie installation directory or
-.B http://syndie.i2p.net/
+.B http://syndie.i2p2.de/
