@@ -30,8 +30,8 @@
 <h1>Download</h1>
 <!--
 Windows binaries:<ul>
-<li><a href="http://syndie.i2p.net/dist/syndie-0.917b.win.exe">syndie-0.917b.win.exe</a>
-   (<a href="http://syndie.i2p.net/dist/syndie-0.917b.win.exe.sig">GPG signature</a>) <b>[note: does not yet exist]</b></li>
+<li><a href="http://syndie.i2p2.de/dist/syndie-0.917b.win.exe">syndie-0.917b.win.exe</a>
+   (<a href="http://syndie.i2p2.de/dist/syndie-0.917b.win.exe.sig">GPG signature</a>) <b>[note: does not yet exist]</b></li>
 <li>Download and run the executable installer.</li>
 <li>Prerequisites: None</li>
 </ul>
