@@ -3,7 +3,7 @@
 <body>
 <h1>Welcome to the Syndie help system</h1>
 
-<p><a href="http://syndie.i2p.net/">Syndie</a> is a tool for participating in
+<p><a href="http://syndie.i2p2.de/">Syndie</a> is a tool for participating in
 <i>distributed forums</i> - message boards without any central servers, designed
 with security and anonymity in mind.  It is entirely open source with nearly all
 of the code released outright into the public domain.  It runs on Windows, Linux,
