@@ -1,1 +1,1 @@
-archive=http://syndie.i2p.net/archive/
+archive=http://syndie.i2p2.de/archive/
