@@ -1,4 +1,4 @@
 package syndie;
 public class Version {
-    public static final String VERSION = "1.101a-mf6";
+    public static final String VERSION = "1.101a-6";
 }
